--- a/app/src/main/res/drawable/ic_twotone_straighten_24px.xml
+++ b/app/src/main/res/drawable/ic_twotone_straighten_24px.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M19,12l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,8l18,0l0,-8l-2,0z"
-      android:strokeAlpha="0.3"
-      android:fillAlpha="0.3"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M21,6H3C1.9,6 1,6.9 1,8v8c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2V8C23,6.9 22.1,6 21,6zM21,16H3V8h2v4h2V8h2v4h2V8h2v4h2V8h2v4h2V8h2V16z"/>
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="?attr/colorControlNormal"
+        android:pathData="M19,12l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,4l-2,0l0,-4l-2,0l0,8l18,0l0,-8l-2,0z"
+        android:strokeAlpha="0.3" />
+    <path
+        android:fillColor="?attr/colorControlNormal"
+        android:pathData="M21,6H3C1.9,6 1,6.9 1,8v8c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2V8C23,6.9 22.1,6 21,6zM21,16H3V8h2v4h2V8h2v4h2V8h2v4h2V8h2v4h2V8h2V16z" />
 </vector>
