--- a/app/src/main/res/layout/coordinates_copy_fragment.xml
+++ b/app/src/main/res/layout/coordinates_copy_fragment.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/BottomSheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/coordinatesCopyTitleTextView"
         style="@style/BottomSheetTitle"
-        android:text="@string/copy_coordinates_title"/>
+        android:text="@string/copy_coordinates_title" />
 
     <TextView
         android:id="@+id/coordinatesCopyBothTextView"
         style="@style/BottomSheetListItem"
-        android:text="@string/copy_coordinates_both"/>
+        android:text="@string/copy_coordinates_both" />
 
     <TextView
         android:id="@+id/coordinatesCopyLatitudeTextView"
         style="@style/BottomSheetListItem"
-        android:text="@string/copy_coordinates_latitude"/>
+        android:text="@string/copy_coordinates_latitude" />
 
     <TextView
         android:id="@+id/coordinatesCopyLongitudeTextView"
         style="@style/BottomSheetListItem"
-        android:text="@string/copy_coordinates_longitude"/>
+        android:text="@string/copy_coordinates_longitude" />
 
 </LinearLayout>
