--- a/app/src/main/res/drawable/ic_twotone_file_copy_24px.xml
+++ b/app/src/main/res/drawable/ic_twotone_file_copy_24px.xml
@@ -4,14 +4,14 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="?attr/colorControlNormal"
+      android:fillColor="@color/onSurface"
       android:pathData="M14,7l-6,0l0,14l11,0l0,-9l-5,0z"
       android:strokeAlpha="0.3"
       android:fillAlpha="0.3"/>
   <path
-      android:fillColor="?attr/colorControlNormal"
+      android:fillColor="@color/onSurface"
       android:pathData="M16,1H4C2.9,1 2,1.9 2,3v14h2V3h12V1z"/>
   <path
-      android:fillColor="?attr/colorControlNormal"
+      android:fillColor="@color/onSurface"
       android:pathData="M15,5H8C6.9,5 6.01,5.9 6.01,7L6,21c0,1.1 0.89,2 1.99,2H19c1.1,0 2,-0.9 2,-2V11L15,5zM19,21L8,21V7h6v5h5V21z"/>
 </vector>
