--- a/app/src/main/res/drawable/ic_twotone_screen_lock_portrait_24px.xml
+++ b/app/src/main/res/drawable/ic_twotone_screen_lock_portrait_24px.xml
@@ -3,20 +3,20 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M13.2,10c0,-0.66 -0.54,-1.2 -1.2,-1.2s-1.2,0.54 -1.2,1.2v1h2.4V10z"
-      android:strokeAlpha="0.3"
-      android:fillAlpha="0.3"/>
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M7,19h10V5H7V19zM9,12c0,-0.55 0.45,-1 1,-1v-1c0,-1.1 0.89,-2 2,-2c1.1,0 2,0.89 2,2v1c0.55,0 1,0.45 1,1v3c0,0.55 -0.45,1 -1,1h-4c-0.55,0 -1,-0.45 -1,-1V12z"
-      android:strokeAlpha="0.3"
-      android:fillAlpha="0.3"/>
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M10,16h4c0.55,0 1,-0.45 1,-1v-3c0,-0.55 -0.45,-1 -1,-1v-1c0,-1.11 -0.9,-2 -2,-2c-1.11,0 -2,0.9 -2,2v1c-0.55,0 -1,0.45 -1,1v3C9,15.55 9.45,16 10,16zM10.8,10c0,-0.66 0.54,-1.2 1.2,-1.2s1.2,0.54 1.2,1.2v1h-2.4V10z"/>
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M17,1H7C5.9,1 5,1.9 5,3v18c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V3C19,1.9 18.1,1 17,1zM17,19H7V5h10V19z"/>
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="@color/onSurface"
+        android:pathData="M13.2,10c0,-0.66 -0.54,-1.2 -1.2,-1.2s-1.2,0.54 -1.2,1.2v1h2.4V10z"
+        android:strokeAlpha="0.3" />
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="@color/onSurface"
+        android:pathData="M7,19h10V5H7V19zM9,12c0,-0.55 0.45,-1 1,-1v-1c0,-1.1 0.89,-2 2,-2c1.1,0 2,0.89 2,2v1c0.55,0 1,0.45 1,1v3c0,0.55 -0.45,1 -1,1h-4c-0.55,0 -1,-0.45 -1,-1V12z"
+        android:strokeAlpha="0.3" />
+    <path
+        android:fillColor="@color/onSurface"
+        android:pathData="M10,16h4c0.55,0 1,-0.45 1,-1v-3c0,-0.55 -0.45,-1 -1,-1v-1c0,-1.11 -0.9,-2 -2,-2c-1.11,0 -2,0.9 -2,2v1c-0.55,0 -1,0.45 -1,1v3C9,15.55 9.45,16 10,16zM10.8,10c0,-0.66 0.54,-1.2 1.2,-1.2s1.2,0.54 1.2,1.2v1h-2.4V10z" />
+    <path
+        android:fillColor="@color/onSurface"
+        android:pathData="M17,1H7C5.9,1 5,1.9 5,3v18c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V3C19,1.9 18.1,1 17,1zM17,19H7V5h10V19z" />
 </vector>
