--- a/app/src/main/res/drawable/ic_twotone_terrain_24px.xml
+++ b/app/src/main/res/drawable/ic_twotone_terrain_24px.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M5,16l3.04,0l-1.52,-2.03z"
-      android:strokeAlpha="0.3"
-      android:fillAlpha="0.3"/>
-  <path
-      android:fillColor="?attr/colorControlNormal"
-      android:pathData="M9.78,11.63l1.25,1.67L14,9.33L19,16h-8.46l-4.01,-5.37L1,18h22L14,6L9.78,11.63zM5,16l1.52,-2.03L8.04,16H5z"/>
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="@color/onSurface"
+        android:pathData="M5,16l3.04,0l-1.52,-2.03z"
+        android:strokeAlpha="0.3" />
+    <path
+        android:fillColor="@color/onSurface"
+        android:pathData="M9.78,11.63l1.25,1.67L14,9.33L19,16h-8.46l-4.01,-5.37L1,18h22L14,6L9.78,11.63zM5,16l1.52,-2.03L8.04,16H5z" />
 </vector>
