--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary">#03a9f4</color>
-    <color name="primaryDarkVariant">#007ac1</color>
-    <color name="primaryLightVariant">#67daff</color>
+    <color name="primary">#ffffff</color>
+    <color name="primaryDarkVariant">#cccccc</color>
+    <color name="primaryLightVariant">#ffffff</color>
 
-    <color name="onPrimary">#deffffff</color>
-    <color name="onPrimaryDarkVariant">#99ffffff</color>
-    <color name="onPrimaryLightVariant">#61ffffff</color>
+    <color name="onPrimary">#de000000</color>
+    <color name="onPrimaryDarkVariant">#99000000</color>
+    <color name="onPrimaryLightVariant">#61000000</color>
 
-    <color name="secondary">#03a9f4</color>
-    <color name="secondaryDarkVariant">#007ac1</color>
-    <color name="secondaryLightVariant">#67daff</color>
+    <color name="secondary">#0277bd</color>
+    <color name="secondaryDarkVariant">#004c8c</color>
+    <color name="secondaryLightVariant">#58a5f0</color>
 
-    <color name="onSecondary">#deffffff</color>
-    <color name="onSecondaryDarkVariant">#99ffffff</color>
-    <color name="onSecondaryLightVariant">#61ffffff</color>
+    <color name="onSecondary">#de000000</color>
+    <color name="onSecondaryDarkVariant">#99000000</color>
+    <color name="onSecondaryLightVariant">#61000000</color>
 
     <color name="background">#f9f9f9</color>
     <color name="onBackground">#000000</color>
