--- a/app/src/main/res/drawable/ic_speedometer_24px.xml
+++ b/app/src/main/res/drawable/ic_speedometer_24px.xml
@@ -1,4 +1,4 @@
-<!-- drawable/speedometer.xml -->
+<!-- drawable/ic_speedometer_24px.xml24px.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
