--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,6 +8,16 @@
         <item>@string/settings_compass_mode_magnetic_value</item>
         <item>@string/settings_compass_mode_true_value</item>
     </string-array>
+    <string-array name="settings_theme_mode_labels">
+        <item>@string/settings_theme_mode_auto_label</item>
+        <item>@string/settings_theme_mode_day_label</item>
+        <item>@string/settings_theme_mode_night_label</item>
+    </string-array>
+    <string-array name="settings_theme_mode_values">
+        <item>@string/settings_theme_mode_auto_value</item>
+        <item>@string/settings_theme_mode_day_value</item>
+        <item>@string/settings_theme_mode_night_value</item>
+    </string-array>
     <string-array name="settings_units_labels">
         <item>@string/settings_units_imperial_label</item>
         <item>@string/settings_units_metric_label</item>
