--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -32,4 +32,9 @@
         android:summary="%s"
         android:title="@string/settings_theme_mode_title" />
 
+    <Preference
+        android:key="@string/settings_privacy_policy_key"
+        android:summary="@string/settings_privacy_policy_summary"
+        android:title="@string/settings_privacy_policy_title" />
+
 </PreferenceScreen>
