--- a/app/src/main/res/drawable/ic_positional.xml
+++ b/app/src/main/res/drawable/ic_positional.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="24">
     <path
         android:fillAlpha="0.3"
-        android:fillColor="@color/onSurface"
+        android:fillColor="@color/colorOnSurface"
         android:pathData="M5,15l3.04,0l-1.52,-2.03z"
         android:strokeAlpha="0.3" />
     <path
-        android:fillColor="@color/onSurface"
+        android:fillColor="@color/colorOnSurface"
         android:pathData="M9.78,10.63l1.25,1.67L14,8.33L19,15h-8.46l-4.01,-5.37L1,17h22L14,5L9.78,10.63zM5,15l1.52,-2.03L8.04,15H5z" />
 </vector>
