--- a/app/src/main/res/layout-land/position_fragment.xml
+++ b/app/src/main/res/layout-land/position_fragment.xml
@@ -40,7 +40,7 @@
                 app:piv_dynamicCount="true"
                 app:piv_interactiveAnimation="true"
                 app:piv_radius="3dp"
-                app:piv_selectedColor="@color/secondary"
+                app:piv_selectedColor="@color/colorSecondary"
                 app:piv_unselectedColor="@color/onSurfaceVeryLightVariant"
                 app:piv_viewPager="@id/coordinatesViewPager" />
 
@@ -52,57 +52,47 @@
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:indeterminate="true"
-                app:layout_constraintBottom_toTopOf="@id/screenLockSwitch"
+                app:layout_constraintBottom_toTopOf="@id/screenLockButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/pageIndicatorView" />
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/shareButton"
-                style="@style/ImageButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/share_content_description"
-                android:src="@drawable/ic_twotone_share_24px"
+                app:icon="@drawable/ic_twotone_share_24px"
+                app:iconGravity="textStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/copyButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/copyButton"
-                style="@style/ImageButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/copy_coordinates_content_description"
-                android:src="@drawable/ic_twotone_file_copy_24px"
+                app:icon="@drawable/ic_twotone_file_copy_24px"
+                app:iconGravity="textStart"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/invertColorsButton"
+                app:layout_constraintEnd_toStartOf="@id/screenLockButton"
                 app:layout_constraintStart_toEndOf="@id/shareButton"
                 app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
-            <ImageButton
-                android:id="@+id/invertColorsButton"
-                style="@style/ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/invert_colors_content_description"
-                android:src="@drawable/ic_twotone_invert_colors_24px"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/screenLockSwitch"
-                app:layout_constraintStart_toEndOf="@id/copyButton"
-                app:layout_constraintTop_toBottomOf="@id/progressBar" />
-
-            <ImageButton
-                android:id="@+id/screenLockSwitch"
-                style="@style/ImageButton"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/screenLockButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/settings_screen_lock_content_description"
-                android:src="@drawable/ic_twotone_screen_lock_portrait_24px"
+                app:icon="@drawable/ic_twotone_screen_lock_portrait_24px"
+                app:iconGravity="textStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/invertColorsButton"
+                app:layout_constraintStart_toEndOf="@id/copyButton"
                 app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
