--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,36 +3,31 @@
 
     <!-- Base application theme. -->
     <style name="Positional.Day" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorAccent">@color/secondary</item>
-        <item name="colorError">@color/error</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primaryDarkVariant</item>
-        <item name="colorSecondary">@color/secondary</item>
-        <item name="android:colorBackground">@color/background</item>
-        <item name="android:textColor">@color/onSurface</item>
-        <item name="android:textColorPrimary">@color/onSurface</item>
+        <item name="colorError">@color/colorError</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="android:textColor">@color/colorOnSurface</item>
+        <item name="android:textColorPrimary">@color/colorOnSurface</item>
         <item name="android:textColorSecondary">@color/onSurfaceLightVariant</item>
-        <item name="snackbarStyle">@style/SnackbarStyle</item>
 
         <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:statusBarColor">@color/colorBackground</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Positional.DayNight" parent="Positional.Day" />
 
     <style name="BottomNavigationViewStyle">
-        <item name="android:background">@color/surface</item>
+        <item name="android:background">@color/colorSurface</item>
         <item name="itemIconTint">@color/bottom_navigation_icon_tint</item>
         <item name="itemTextColor">@color/bottom_navigation_text_color</item>
     </style>
 
     <!-- Bottom Sheets -->
-
-    <style name="BottomSheet">
-        <item name="android:background">@color/surfaceLightVariant</item>
-    </style>
 
     <style name="BottomSheetTitle">
         <item name="android:gravity">center_vertical|left|start</item>
@@ -40,7 +35,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:paddingEnd">@dimen/bottom_sheet_padding_horizontal</item>
         <item name="android:paddingStart">@dimen/bottom_sheet_padding_horizontal</item>
-        <item name="android:textColor">@color/onSurface</item>
+        <item name="android:textColor">@color/colorOnSurface</item>
         <item name="android:textSize">@dimen/bottom_sheet_title_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -67,9 +62,11 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="CompassBackground"></style>
+    <style name="CompassBackground">
+        <item name="android:tint">@color/colorOnSurface</item>
+    </style>
 
-    <style name="CompassDegrees"></style>
+    <style name="CompassDegrees"/>
 
     <!-- Coordinates -->
 
@@ -96,6 +93,7 @@
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:tintMode">src_in</item>
+        <item name="android:tint">@color/colorOnSurface</item>
     </style>
 
     <style name="PositionStatIconLarge" parent="PositionStatIcon">
@@ -191,13 +189,9 @@
     </style>
 
     <style name="ImageButton">
-        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+        <!--<item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>-->
         <item name="android:padding">16dp</item>
-        <item name="android:tint">@color/selectable_control</item>
-    </style>
-
-    <style name="SnackbarStyle" parent="Widget.MaterialComponents.Snackbar">
-        <item name="android:backgroundTint">@android:color/white</item>
+        <!--<item name="android:tint">@color/selectable_control</item>-->
     </style>
 
 </resources>
