--- a/app/src/main/res/layout/position_fragment.xml
+++ b/app/src/main/res/layout/position_fragment.xml
@@ -129,14 +129,8 @@
                 <TextView
                     android:id="@+id/elevationValueTextView"
                     style="@style/PositionStatValue"
-                    tools:text="10000" />
-
-                <TextView
-                    android:id="@+id/elevationUnitTextView"
-                    style="@style/PositionStatUnit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ft" />
+                    android:text="@string/location_value_unknown"
+                    tools:text="10,000 ft" />
 
             </LinearLayout>
 
@@ -168,14 +162,8 @@
                 <TextView
                     android:id="@+id/speedValueTextView"
                     style="@style/PositionStatValue"
-                    tools:text="100" />
-
-                <TextView
-                    android:id="@+id/speedUnitTextView"
-                    style="@style/PositionStatUnit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="mph" />
+                    android:text="@string/location_value_unknown"
+                    tools:text="100 mph" />
 
             </LinearLayout>
 
@@ -207,14 +195,8 @@
                 <TextView
                     android:id="@+id/bearingValueTextView"
                     style="@style/PositionStatValue"
-                    tools:text="359" />
-
-                <TextView
-                    android:id="@+id/bearingUnitTextView"
-                    style="@style/PositionStatUnit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unit_degrees" />
+                    android:text="@string/location_value_unknown"
+                    tools:text="359°" />
 
             </LinearLayout>
 
@@ -248,14 +230,8 @@
                     style="@style/PositionStatValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="10" />
-
-                <TextView
-                    android:id="@+id/accuracyUnitTextView"
-                    style="@style/PositionStatUnit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ft" />
+                    android:text="@string/location_value_unknown"
+                    tools:text="10 ft" />
 
             </LinearLayout>
 
